# crystallib

./: Cargo.toml
assets/: spacegroup_generators.json  spacegroup_symbols.json  spacegroup_symmetry_operations.json  spacegroups.py
assets/data/: covalent-radii.toml  van-der-Waals-radii.toml
src/: atoms.rs  cell.rs  data.rs  lib.rs  phase.rs  symmetry.rs
tests/: test.rs  test_symmetry_equivalent_points.py
